<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Plan G: Fitness</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_exercises">Exercises</string>
    <string name="nav_workouts">Workouts</string>
    <string name="nav_programs">Programs</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate_review"><![CDATA[Rate & review]]></string>
    <string name="nav_send_feedback">Send feedback</string>

    <string name="create_workout_title">Create a workout</string>
    <string name="choose_exercise">Select an exercise</string>
    <string name="exercises">Exercises</string>
    <string name="add_exercise">Add exercise</string>
    <string name="add_row">Add new row</string>
    <string name="set">Set</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="reps_min">Min</string>
    <string name="reps_max">Max</string>
    <string name="weight">Weight</string>
    <string name="workout_name">Workout Name</string>

    <string name="create_program_title">Create a program</string>
    <string name="choose_program">Select a program</string>
    <string name="program_name">Program Name</string>
    <string name="programs">Programs</string>
    <string name="choose_workout">Select a workout</string>
    <string name="choose_workouts">Select Workouts</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="day_placeholder">Day %s</string>
    <string name="add_day">Add day</string>
    <string name="start_session">Start Workout</string>
    <string name="finish_workout">Finish</string>

    <string name="exercise_complete">Complete</string>
    <string name="complete_set">Complete sets</string>
    <string name="expand_exercise_details">Expand exercise details</string>

    <string name="notification_complete_set">Complete</string>
    <string name="notification_fail_set">Failed</string>

    <string name="select_additional_options">Select additional options</string>
    <string name="add_set">Add set</string>
    <string name="edit">Edit</string>
    <string name="mark_complete">Mark all complete</string>

    <string name="time_until_next_set">Time until next set</string>
    <string name="start_set">Start your next set</string>

    <string name="form_delete">Delete the entry?</string>
    <string name="form_delete_failed">Unable to delete the entry</string>
    <string name="action_create">Create</string>
    <string name="action_delete">Delete</string>
    <string name="name">Name</string>
    <string name="description">Description</string>

    <string name="add_note">Add note</string>
    <string name="note">Note</string>
    <string name="increment">Increment</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="create_exercise">Create Exercise</string>

    <string name="select_exercise">Select Exercise</string>
    <string name="select_exercise_new">Create a new exercise</string>
    <string name="select_exercise_link">Choose an exercise from another Workout</string>

    <string name="program_preference_file_key">
        <xliff:g id="preference_key">com.autilite.plan_g.PROGRAM_PREFERENCE_FILE_KEY</xliff:g>
    </string>
    <string name="last_used_program">
        <xliff:g id="preference_key">com.autilite.plan_g.last_used_program</xliff:g>
    </string>
    <string name="last_program_day">
        <xliff:g id="preference_key">com.autilite.plan_g.last_program_day</xliff:g>
    </string>
    <string name="rest_between_sets">Rest time between sets</string>
    <string name="create_exercise_fail">Exercise could not be created</string>
    <string name="create_workout_fail">Workout could not be created</string>
    <string name="create_program_fail">Program could not be created</string>
    <string name="create_form_fail">Entry could not be created</string>
    <string name="add_workout_exercise_fail">%s could not be added to the workout</string>
    <string name="action_switch_day">Switch Day</string>
    <string name="create_program">Create Program</string>
    <string name="edit_program">Edit Program</string>
    <string name="edit_workout_title">Edit Workout</string>
</resources>
