<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start_session"
            android:title="@string/start_session" />
        <item
            android:id="@+id/nav_exercises"
            android:title="@string/nav_exercises" />
        <item
            android:id="@+id/nav_workout"
            android:title="@string/nav_workouts" />
        <item
            android:id="@+id/nav_programs"
            android:title="@string/nav_programs" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_rate_review"
                android:title="@string/nav_rate_review" />
            <item
                android:id="@+id/nav_send_feedback"
                android:title="@string/nav_send_feedback" />
        </menu>
    </item>

</menu>
