<?xml version="1.0" encoding="utf-8"?>

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/exercises"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent" />

    <TextView
        android:text="@string/sets"
        android:layout_weight="0.25"
        android:layout_width="0dp"
        android:layout_height="match_parent" />

    <TextView
        android:text="@string/reps"
        android:layout_weight="0.25"
        android:layout_width="0dp"
        android:layout_height="match_parent" />

    <TextView
        android:text="@string/weight"
        android:layout_weight="0.25"
        android:layout_width="0dp"
        android:layout_height="match_parent" />
</TableRow>