<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout
        android:id="@+id/workout_create_table"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/workout_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:text="@string/exercise"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/sets"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/reps"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/weight"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </TableRow>

        <include layout="@layout/workout_table_row" />
    </TableLayout>

    <Button
        android:id="@+id/button_add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/add_row"
        />
</LinearLayout>